# webcamera

./: Cargo.toml  Trunk.toml  build.py  index.html
.cargo/: config.toml
src/: app.rs  file_stuff.rs  image.rs  image_info.rs  lib.rs  main.rs  render.rs
