[package]
name = "eframe_template"
version = "0.1.0"
authors = ["Ollie Lynas"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1.0.213", features = ["derive"] }
wasm-bindgen = "0.2.95"
anyhow = "1.0.91"
egui-phosphor = "=0.7.3"
strum = "0.26.3"
strum_macros = "0.26.4"
image = "0.25.4"
web-time = "1.1.0"
chrono = "0.4.38"
async_zip = { version = "0.0.17", features = ["deflate"] }
pollster = "0.3.0"
base64-url = "3.0.0"
egui_plot = "=0.29.0"
oklab = "1.1.2"

[dependencies.web-sys]
version = "0.3.40"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'EventTarget',
  'Element',
  'HtmlCanvasElement',
  'HtmlVideoElement',
  'HtmlElement',
  'ImageData',
  'MediaStream',
  'MessageEvent',
  'Performance',
  'RtcDataChannel',
  'RtcDataChannelEvent',
  'Window',
  'Navigator',
  'HtmlCanvasElement',
  'Location',
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
